Snap vetex function with Align rotation to target on, will not align rotation with empty object and bone #108711

Closed
opened 2023-06-07 16:32:15 +02:00 by Nick Chang · 2 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 2.9~~> 3.6

Short description of error
Snap vetex function with Align rotation to target on, will not align rotation with empty object and bone

Exact steps for others to reproduce the error

  1. Based on the default startup.
  2. Create a bone or empty object , rotate move them any where in scene.
  3. Turn on snapping function set it to vetex.
  4. Trigger on Align rotation to target.
  5. Drag the default cube to snap the empty or bone . It will only snap the position , Align rotation is ignored.
System Information Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 Blender Version Broken: version: 2.9~~> 3.6 Short description of error Snap vetex function with Align rotation to target on, will not align rotation with empty object and bone Exact steps for others to reproduce the error 1. Based on the default startup. 2. Create a bone or empty object , rotate move them any where in scene. 3. Turn on snapping function set it to vetex. 4. Trigger on Align rotation to target. 5. Drag the default cube to snap the empty or bone . It will only snap the position , Align rotation is ignored.
Nick Chang added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-06-07 16:32:16 +02:00
Nick Chang changed title from Snap vetex function with Align rotation to target on will not align rotation with empty object or bone to Snap vetex function with Align rotation to target on, will not align rotation with empty object or bone 2023-06-07 16:33:28 +02:00

It does align bone or empty to vertex normal though, don't think this is bug really, but perhaps it can use other object orientations. Will leave to @mano-wii to decide.

It does align bone or empty to vertex normal though, don't think this is bug really, but perhaps it can use other object orientations. Will leave to @mano-wii to decide.
Richard Antalik added
Status
Needs Info from Developers
Module
Modeling
and removed
Status
Needs Triage
labels 2023-06-07 23:15:19 +02:00
Germano Cavalcante added
Status
Confirmed
Type
To Do
and removed
Status
Needs Info from Developers
Type
Report
labels 2023-06-08 05:36:24 +02:00
Germano Cavalcante self-assigned this 2023-06-08 05:36:34 +02:00

It is something reasonable to implement.
Confirmed.

It is something reasonable to implement. Confirmed.
Nick Chang changed title from Snap vetex function with Align rotation to target on, will not align rotation with empty object or bone to Snap vetex function with Align rotation to target on, will not align rotation with empty object and bone 2023-06-09 05:36:55 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-22 00:37:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108711
No description provided.