Fix #108711: Snap with Align Rotation to Target do not align rotation for Empties or Bone

For now it only supports the body of the bone.

Head and tail will be supported later.